--- a/vocab/templates/vocab/index.html
+++ b/vocab/templates/vocab/index.html
@@ -5,8 +5,8 @@
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'vocab/styles.css' %}">
   </head>
-
-  <body>x
+  
+  <body>
     <!-- Login and Sign up -->
     <div class="user-panel" style="margin-bottom: 20px;">
       {% if user and not user.is_anonymous %}
@@ -14,7 +14,7 @@
       <a href="logout">
 	<button>
 	  Log Out
-    </button>
+	</button>
       </a>
       {% else %}
       <form action="sign-up" method="POST"> {% csrf_token %}
@@ -43,60 +43,92 @@
       </form>
       {% endif %}
     </div>
-
+    
     {% if user and not user.is_anonymous %}
-    <!-- Add a new word -->
-    <div class="container">
-      <div class="entry" id="entyr-new-word" >
-	<form action="add-word" method="POST"> {% csrf_token %}
-	  <div class="vote" id="vote-new-word" style="display:none">
-	  </div>
-	  <div class="word" id="word-new-word">
-	    <input class="word-input" id="word-input-new-word" type="text" name="word" onblur="addWord('word-input-new-word', 'description-new-word')" placeholder="New word">
-	  </div>
-	  <input class="description" id="description-new-word" type="text" name="description" onblur="addWord('word-input-new-word', 'description-new-word')" placeholder="Description..." value="" >
-	  <div class="tags" id="tags-new-word" style="display:none">
-	  </div>
-	  <div class="entry-date" id="entry-date-new-word" style="display:none">
-	  </div>
-	  <div class="progress" id="progress-new-word" style="display:none">
-	  </div>
-	</form>
+    <!-- <\!-- Add a new word -\-> -->
+    <!-- <div class="container"> -->
+    <!--   <div class="entry" id="entyr-new-word" > -->
+    <!-- 	<form action="add-word" method="POST"> {% csrf_token %} -->
+    <!-- 	  <div class="vote" id="vote-new-word" style="display:none"> -->
+    <!-- 	  </div> -->
+    <!-- 	  <div class="word" id="word-new-word"> -->
+    <!-- 	    <input class="word-input" id="word-input-new-word" type="text" name="word" onblur="addWord('word-input-new-word', 'description-new-word')" placeholder="New word"> -->
+    <!-- 	  </div> -->
+    <!-- 	  <input class="description" id="description-new-word" type="text" name="description" onblur="addWord('word-input-new-word', 'description-new-word')" placeholder="Description..." value="" > -->
+    <!-- 	  <div class="tags" id="tags-new-word" style="display:none"> -->
+    <!-- 	  </div> -->
+    <!-- 	  <div class="entry-date" id="entry-date-new-word" style="display:none"> -->
+    <!-- 	  </div> -->
+    <!-- 	  <div class="progress" id="progress-new-word" style="display:none"> -->
+    <!-- 	  </div> -->
+    <!-- 	</form> -->
+    <!--   </div> -->
+    
+    <div class="new-entry">
+      <div class="word" id="new-word">
+	New Word
       </div>
-      
-      <!-- Words -->
-      {% for word in words %}
-      <div class="entry" id="entry-{{ word.id }}" >
-	<div class="vote" id="vote-{{ word.id }}" style="display:none">
-	  {{ word.popularity_rating }}
-	</div>
-	<div class="word" id="word-{{ word.id }}">
-	  {{ word.word }}
-	</div>
-	<div class="description" id="description-{{ word.id }}">
-	  {{ word.brief_description }}
-	</div>
-	<div class="tags" id="tags-{{ word.id }}" style="display:none">
-	  Tags: 
-	  {% for tag in word.tags %}
-	  {{ tag }} 
-	  {% endfor %}
-	</div>
-	<div class="entry-date" id="entry-date-{{ word.id }}" style="display:none">
-	  {{ word.entry_date }}
-	</div>
-	<div class="progress" id="progress-{{ word.id }}" style="display:none">
-	  {{ word.skill_rating }}
-	</div>
+      <div class="description" id="new-description">
+	Placeholder text.
+      </div>
+      <div class="control-panel">
+	<img width="40px" src="/static/vocab/save_icon.png" class="control-panel-icon save-icon">
+	<img width="40px" src="/static/vocab/tag_icon.png" class="control-panel-icon tag-icon">
+
+	<!-- var edit_icon = document.createElement("img"); -->
+	<!-- edit_icon.setAttribute("width", "40px"); -->
+	<!-- edit_icon.setAttribute("src", "/static/vocab/edit_icon.png"); -->
+	<!--     edit_icon.setAttribute("class", "control-panel-icon edit-icon"); -->
+	<!-- control_panel.appendChild(edit_icon); -->
+	
+	<!-- var tag_icon = document.createElement("img"); -->
+	<!-- tag_icon.setAttribute("width", "40px"); -->
+	<!-- tag_icon.setAttribute("src", "/static/vocab/tag_icon.png"); -->
+	<!-- tag_icon.setAttribute("class", "control-panel-icon tag-icon"); -->
+	<!-- control_panel.appendChild(tag_icon); -->
+	
+	<!-- var delete_icon = document.createElement("img"); -->
+	<!-- delete_icon.setAttribute("width", "40px"); -->
+	<!-- delete_icon.setAttribute("src", "/static/vocab/delete_icon.png"); -->
+	<!-- delete_icon.setAttribute("class", "control-panel-icon delete-icon"); -->
+	<!-- control_panel.appendChild(delete_icon); -->
 	
       </div>
-      {% endfor %}
     </div>
+    
+    <!-- Words -->
+    {% for word in words %}
+    <div class="entry" id="entry-{{ word.id }}" model-id="{{ word.id }}">
+      <div class="vote" id="vote-{{ word.id }}" style="display:none">
+    	{{ word.popularity_rating }}
+      </div>
+      <div class="word" id="word-{{ word.id }}">
+    	{{ word.word }}
+      </div>
+      <div class="description" id="description-{{ word.id }}">
+    	{{ word.brief_description }}
+      </div>
+      <div class="tags" id="tags-{{ word.id }}" style="display:none">
+    	Tags:
+    	{% for tag in word.tags %}
+    	{{ tag }}
+    	{% endfor %}
+      </div>
+      <div class="entry-date" id="entry-date-{{ word.id }}" style="display:none">
+    	{{ word.entry_date }}
+      </div>
+      <div class="progress" id="progress-{{ word.id }}" style="display:none">
+    	{{ word.skill_rating }}
+      </div>
+    </div>
+    {% endfor %}
+    
+    <!-- </div> -->
     {% endif %}
-
+    
     {% load staticfiles %}
     <script src="{% static "vocab/index.js" %}"></script>
-
+    
   </body>
 </html>
 
