--- a/vocab/static/vocab/styles.css
+++ b/vocab/static/vocab/styles.css
@@ -1,217 +1,46 @@
-.friend {
-    display: inline-block;
-    border: 1px solid black;
-    border-radius: 5px;
-    margin-bottom: 2px;
-    padding: 2px 2px 2px 2px;
-}
-
-#search {
-    width: 200px;
-}
-
-.side-section{
-    border: 2px solid black;
-    border-radius: 10px;
-    margin-top: 4px;
-    padding: 4px 4px 4px 4px;
-}
-
-aside hr {
-    margin-top: 2px;
-    margin-bottom: 2px;
-}
-
-header {
-    width: 960px;
-    border: 1px solid black;
-    position: fixed;
-    height: 50px;
-    background-color: white;
-    z-index: 100;
-}
-
-section#main-section{
-    margin-top: 50px;
-    float: right;
-    width: 660px;
-    padding-top: 4px;
-}
-
-aside {
-    margin-top: 50px;
-    float: left;
-    width: 296px;
-    position: fixed;
-    /* border: 2px solid black; */
-    /* border-radius: 10px; */
-}
-
 body {
     width: 960px;
-    background-color: Black;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0px;
 }
 
-.entry[favourite="1"] .word {
-    background-color: yellow;
-    /* border-color: yellow; */
-    /* outline: yellow solid 3px; */
-    /* box-shadow: 0px 0px 0px 2pt yellow; */
-}
-
-.entry:not([favourite="1"]) .favourite-icon {
-    opacity: 0.4;
-    grayscale: 1.;
-}
-
-.tag {
-    background-color: LightBlue;
-    display: inline;
-    padding: 2px 2px 2px 2px;
-    border: 2px solid black;
-    border-radius: 2px;
-    margin-top: 0px;
-    margin-right: 4px;
-    font-size: 75%;
-    position: relative;
-    /* min-width: 40px; */
-}
-
-.tag-label {
-    background-color: white;
-}
-
-.tags {
-    padding-bottom: 4px;
-}
-
-.tags-separator {
+hr {
     margin-top: 2px;
-    margin-bottom: 4px;
+    margin-bottom: 2px;
 }
 
-.tag-delete-icon {
-    position: absolute;
-    top: -6px;
-    left: -6px;
+.form-messages {
+    color: red;
 }
 
-.word:focus, .description:focus {
-    outline: 0;
-}
-
-div.new-entry .word[placeholder=true], .description[placeholder=true] {
-    color: LightGrey;
-    font-style: italic;
-    font-size: 75%;
-    border-color: black;
-}
-
-body {
-    background-color: white;
-}
-
-div.entry {
-    border: 2px solid;
+#welcome {
+    border: 1px solid black;
     border-radius: 10px;
-    padding: 4px 4px 4px 4px;
-    margin-bottom: 4px;
-    background-color: white;
+    position: relative;
+    top: 150px;
+    height: 200px;
+    margin-bottom: 5px;
+    padding: 5px 5px 5px 5px;
 }
 
-div.new-entry {
-    border: 2px solid blue;
+#sign-in {
+    float: left;
+    width: 466px;
+    border: 1px solid black;
     border-radius: 10px;
-    padding: 4px 4px 4px 4px;
-    margin-bottom: 4px;
-    background-color: white;
+    position: relative;
+    top: 150px;
+    height: 150px;
+    padding: 5px 5px 5px 5px;
 }
 
-div.word {
-	border: 2px solid;
-	border-radius: 10px;
-	/* float: left; */
-	display: inline-block;
-	padding: 4px 4px 4px 4px;
-	margin-right: 4px;
-	min-width: 70px;
+#register {
+    float: right;
+    width: 466px;
+    border: 1px solid black;
+    border-radius: 10px;
+    position: relative;
+    top: 150px;
+    height: 150px;
+    padding: 5px 5px 5px 5px;
 }
-
-div.description {
-/*	margin: 2px 0px 2px 0px;*/	
-	/*padding: 4px 4px 4px 4px;*/
-	/*border: 1px solid green;*/
-	border-radius: 10px;
-	margin-top: 0px;
-	display: inline;
-/*	float: right;*/
-}
-
-div.control-panel {
-    clear: both;
-    margin-top: 4px;
-    /*margin-bottom: 0px;*/
-    /*border: 1px solid blue;*/
-    /*padding-bottom: 0px;*/
-    font-size: 0px;
-}
-
-div.entry-end {
-    clear: both;
-}
-
-.control-panel-icon {
-    margin-top: 4px;
-    margin-right: 5px;
-}
-
-.edit-icon {
-}
-
-/* .control-panel{ */
-/*     border: 1px solid black; */
-/* } */
-
-/* .container{ */
-/*     margin-left: auto;  */
-/*     margin-right: auto;  */
-/*     width:900px;  */
-/*     font-family: 'Arial'; */
-/* } */
-
-/* .entry{ */
-/*     border:1px solid black;  */
-/*     border-radius:5px;  */
-/*     clear: both;  */
-/*     padding: 5px 5px 5px 5px;  */
-/*     min-height: 30px;  */
-/*     margin-bottom: 1px;  */
-/*     background-color: MintCream; */
-/* } */
-
-/* .word{ */
-/*     border: 1px solid;  */
-/*     border-radius: 10px;  */
-/*     float: left;  */
-/*     padding:5px 5px 5px 5px;  */
-/*     margin-right: 5px;  */
-/*     background-color: LawnGreen; */
-/* } */
-
-/* .description{ */
-/*     border: 0px;  */
-/*     padding: 0px 0px 0px 0px;  */
-/*     margin: 0px 0px 0px 0px;  */
-/*     background-color: MintCream; */
-/* } */
-
-/* .word-input{ */
-/*     border: 0px;  */
-/*     float:left;  */
-/*     margin-right:5px;   */
-/*     padding: 0px 0px 0px 0px;  */
-/*     background-color: LawnGreen; */
-/* } */
