--- a/vocab/static/vocab/user_index/styles.css
+++ b/vocab/static/vocab/user_index/styles.css
@@ -14,7 +14,7 @@
     border: 2px solid black;
     border-radius: 10px;
     margin-top: 4px;
-    padding: 4px 4px 4px 4px;
+    padding: 4px 10px 4px 4px;
 }
 
 aside hr {
@@ -43,10 +43,11 @@ aside {
     float: left;
     width: 296px;
     position: fixed;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
     top: 0px;
     bottom: 0px;
     padding-bottom: 200px;
+    overflow: auto;
     /* border: 2px solid black; */
     /* border-radius: 10px; */
 }
