added a  comments section

--- a/vocab/templates/vocab/user_index.html
+++ b/vocab/templates/vocab/user_index.html
@@ -83,6 +83,7 @@
     <!-- {% load staticfiles %} -->
     <script src="{% static "vocab/user_index/user_index.js" %}"></script>
     <script src="{% static "vocab/user_index/main_section/main_section.js" %}"></script>
+    <script src="{% static "vocab/user_index/main_section/comments.js" %}"></script>
     <!-- <script src="{% static "vocab/user_index/search_and_filter.js" %}"></script> -->
     
   </body>
