--- a/vocab/templates/vocab/user_index.html
+++ b/vocab/templates/vocab/user_index.html
@@ -11,7 +11,6 @@
   </head>
   
   <body>
-
     <header>
       <a href="/vocab/sign-out">
 	<button>
@@ -38,17 +37,6 @@
 	  </ul>
 	</nav>
       </section> 
-      <!-- <section class="side-section" id="search-and-filter"> -->
-      <!-- 	<span id="search-and-filter-label">Search and Filter</span> -->
-      <!-- 	<hr /> -->
-      <!-- 	<span class="input-label" id="search-label">Search</span> -->
-      <!-- 	<input id="search-input"></input> -->
-      <!-- 	<br /> -->
-      <!-- 	<span class="input-label" id="tags-label">Tags</span> -->
-      <!-- 	<input id="tags-input"></input> -->
-      <!-- 	<br /> -->
-      <!-- 	<span class="input-label" id="sort-label">Sort</span> -->
-      <!-- </section> -->
       <section class="side-section" id="friends">
 	Friends
 	<hr />
@@ -87,6 +75,7 @@
     <script src="{% static "vocab/user_index/main_section/comments.js" %}"></script>
     <script src="{% static "vocab/user_index/side_section/side_section.js" %}"></script>
     <script src="{% static "vocab/user_index/side_section/search_and_filter.js" %}"></script>
+    <script src="{% static "vocab/user_index/side_section/friends.js" %}"></script>
     <!-- <script src="{% static "vocab/user_index/search_and_filter.js" %}"></script> -->
     
   </body>
